[gd_scene load_steps=8 format=3 uid="uid://d26v6eiwtxilg"]

[ext_resource type="Script" uid="uid://oek5hnj2rh4p" path="res://scripts/core/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://k8jtbqlhy1pu" path="res://scenes/stations/SourceStation.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://g0a8ow8ox1xk" path="res://scenes/stations/CuttingStation.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cl5hq3pke524u" path="res://scenes/stations/CookingStation.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cjl12db6w1n7x" path="res://scenes/stations/PlateStation.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://by3h4ewgmfyfr" path="res://scenes/stations/RenduStation.tscn" id="6"]

[sub_resource type="NavigationPolygon" id="1001"]
vertices = PackedVector2Array(0, 0, 1024, 0, 1024, 600, 0, 600)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(0, 2, 3)])

[node name="Main" type="Node2D" groups=["root"]]
script = ExtResource("1")

[node name="NavRegion" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("1001")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 16.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 8.0
text = "Choisis une recette avec les boutons:"

[node name="MessageLabel" type="Label" parent="."]
visible = false
offset_left = 16.0
offset_top = 32.0
offset_right = 416.0
offset_bottom = 82.0
text = "üçÖ Ramasse les ingr√©dients pour ta recette !"
autowrap_mode = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 12.0
offset_top = 28.0
offset_right = 300.0
offset_bottom = 120.0

[node name="RecipesRight" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 680.0
offset_top = 40.0
offset_right = 1100.0
offset_bottom = 200.0

[node name="Source_dough" parent="." instance=ExtResource("2")]
position = Vector2(100, 100)
item_type = "dough"

[node name="Source_tomato" parent="." instance=ExtResource("2")]
position = Vector2(200, 100)

[node name="Source_cheese" parent="." instance=ExtResource("2")]
position = Vector2(300, 100)
item_type = "cheese"

[node name="Source_onion" parent="." instance=ExtResource("2")]
position = Vector2(400, 100)
item_type = "onion"

[node name="Source_mushroom" parent="." instance=ExtResource("2")]
position = Vector2(500, 100)
item_type = "mushroom"

[node name="CuttingStation" parent="." instance=ExtResource("3")]
position = Vector2(200, 250)

[node name="CookingStation" parent="." instance=ExtResource("4")]
position = Vector2(300, 250)

[node name="PlateStation" parent="." instance=ExtResource("5")]
position = Vector2(400, 250)

[node name="RenduStation" parent="." instance=ExtResource("6")]
position = Vector2(500, 250)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(277, 154)
zoom = Vector2(2.1, 2.1)
